# swarm_example

./: README.md  pyproject.toml
output/: edited_paragraph.md.md  mobile_app_ideas.md.md  python_function_example.md.md
src/swarm_example/: main.py
src/swarm_example/agents/: router.py  router_instructions.md  utils.py
src/swarm_example/agents/brainstormer/: __init__.py  brainstormer.py  brainstormer_configuration.json  instructions.md
src/swarm_example/agents/editor/: __init__.py  editor.py  editor_configuration.json  editor_tools.py  instructions.md
src/swarm_example/agents/programmer/: __init__.py  instructions.md  programmer.py  programmer_configuration.json  programmer_tools.py
